--- a/.github/workflows/my_pipeline.yml
+++ b/.github/workflows/my_pipeline.yml
@@ -37,5 +37,8 @@ jobs:
       - name: assign ec2 ip to a variable
         run: terraform output ec2_instance_ip >> webserver_ip
       
+      - name: destroy
+        run: terraform destroy -auto-approve
+      
       # - name: update the inventory hosts with the variable value
       #   run: 
