--- a/.github/workflows/my_pipeline.yml
+++ b/.github/workflows/my_pipeline.yml
@@ -34,8 +34,8 @@ jobs:
         run: terraform apply -auto-approve
         continue-on-error: true
       
-      - name: destroy
-         run: terraform destroy -auto-approve
+      # - name: destroy
+      #    run: terraform destroy -auto-approve
       
       # - name: assign ec2 ip to a variable
       #   run: terraform output ec2_instance_ip >> webserver_ip
