--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,10 @@
 [defaults]
 host_key_checking      = False
+private_key_file = /root/ansible_terraform/aws_instance/test_ssh_key
+remote_user=ec2-user
+
+[privilege_escalation]
+become=true
+become_method=sudo
+become_user=root
+become_ask_pass=false
